--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-offline",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Store query and repeat",
   "main": "./dist/main.js",
   "repository": "github:jonkofee/axios-offline.git",
@@ -27,7 +27,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "preversion": "npm test",
     "version": "npm run build",
     "postpublish": "git push --tags"
